--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -65,45 +65,27 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
-                <!-- <mat-form-field>
-                      <input type="text" placeholder="Agency"[(ngModel)]="data.agency" name="agency" aria-label="Agency" matInput [formControl]="myControl" [matAutocomplete]="auto">
-                      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" >
-                          <input class="inp" type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}"
-                          class="search-allstates" placeholder="Search By Agency">
-                      <i class="fa fa-search " area-hidden="true"></i>
-                        <mat-option *ngFor="let item of agen | filter:agensearch" [value]="item.agency">
-                            {{item.agency}}
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field> -->
+              
                 <mat-form-field>
 
-                  <mat-select [(ngModel)]="data.agency" name="agency" placeholder="Select Agency">
+                  <mat-select [(ngModel)]="data.agency" name="agencys" placeholder="Select Agency">
 
                     <input class="inp" type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}"
                       class="search-allstates" placeholder="Search By Agency">
                     <i class="fa fa-search " area-hidden="true"></i>
                     <button class="btn btn-primary mg-0" (click)="acgeny_check()">Others</button>
                     <input class="inp" class="search-allstates" type="text" placeholder="Type Agency" name="agency"
-                      [(ngModel)]="data.agency" *ngIf="agency==true" />
-                    <mat-option *ngFor="let item of agen | filter:agensearch" [value]="item.agencies">{{item.agencies}}
+                      [(ngModel)]="data.agency" *ngIf="agencie==true" />
+                    <mat-option *ngFor="let item of agen | filter:agensearch" [value]="item.agencies">{{item.agencies }}
                     </mat-option>
                     
 
                   </mat-select>
                 </mat-form-field>
               </div>
-              <!-- <button class="btn btn-primary mg-0"  (click)="acgeny_check()" >Others</button> -->
+              
             </div>
-            <!-- <div class="col-md-6 col-sm-6" *ngIf="agency==true">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Agency" name="agency" [(ngModel)]="data.agency"  />
-                 
-                </mat-form-field>
-              </div>
-            </div> -->
+            
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
@@ -127,7 +109,24 @@
                         </mat-option>
                       </mat-autocomplete>
                     </mat-form-field> -->
+                    <mat-form-field class="example-chip-list" *ngIf="data.category">
+                        <mat-chip-list #chipList>
+                            <mat-chip [selectable]="selectable" [removable]="removable" (removed)="remove(data.category, $event)" *ngIf="hide==false">
+                                {{data.category}}
+                               
+                            </mat-chip>
+                            <mat-chip *ngFor="let list of data.category" [selectable]="selectable" [removable]="removable" (removed)="remove(list, $event)">
+                                {{list}}
+                                <i class="fa fa-remove" (click)="remove(list, $event)"></i>
+                                
+                            </mat-chip>
+                            <input [matChipInputFor]="chipList" 
+                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                [matChipInputAddOnBlur]="addOnBlur">
+                        </mat-chip-list>
+                    </mat-form-field>
                 <mat-form-field>
+                   
                   <mat-select [(ngModel)]="data.category" name="category" placeholder="Select Category"
                     (change)="subcategory(data.category)" multiple>
                     <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}"
@@ -147,10 +146,25 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
-
+                  <mat-form-field class="example-chip-list" *ngIf="data.subcat">
+                      <mat-chip-list #chipList>
+                          <mat-chip [selectable]="selectable" [removable]="removable" (removed)="remove(data.subcat, $event)" *ngIf="hide1==false">
+                              {{data.subcat}}
+                             
+                          </mat-chip>
+                          <mat-chip *ngFor="let list of data.subcat" [selectable]="selectable" [removable]="removable" (removed)="remove(list, $event)">
+                              {{list}}
+                              <i class="fa fa-remove" (click)="remove(list, $event)"></i>
+                              
+                          </mat-chip>
+                          <input [matChipInputFor]="chipList" 
+                              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                              [matChipInputAddOnBlur]="addOnBlur">
+                      </mat-chip-list>
+                  </mat-form-field>
                 <mat-form-field class="category-edit-rfp">
 
-                  <mat-select [(ngModel)]="data.subcat" name="subcat" placeholder="Select Sub Category" multiple>
+                  <mat-select [(ngModel)]="data.subcat" name="subcat" placeholder="Select Sub Category" multiple (change)="selectsubcate()">
                     <input class="inp" type="text" [(ngModel)]="subcatsearch" [ngModelOptions]="{standalone: true}"
                       placeholder="Search By Sub Category" class="search-allstates">
                     <i class="fa fa-search " area-hidden="true"></i> 
@@ -183,32 +197,32 @@
                 <mat-form-field>
                   <!-- <input matInput placeholder="Bid Type" name="bid_type" [(ngModel)]="data.bid_type" /> -->
                   <mat-select placeholder="Bid Type" name="bid_type" [(ngModel)]="data.bid_type">
-                      <mat-option value="RFP"> Request for Proposals</mat-option>
-                      <mat-option value="RFQ">Request for Quotation</mat-option>
-                      <mat-option value="IFQ">Invitation for Quote</mat-option>
-                      <mat-option value="ITB">Invitation to Bid</mat-option>
-                      <mat-option value="IFB">Invitation for Bids</mat-option>
-                      <mat-option value="RFB">Request for Bids</mat-option>
-                      <mat-option value="SOQ">Special Notice</mat-option>
-                      <mat-option value="SPL">Special Notice</mat-option>
-                      <mat-option value="SFQ">Solicitation for Quote</mat-option>
-                      <mat-option value="RSB">Request for Sealed Bid</mat-option>
-                      <mat-option value="RSOQ">Request for Statement of Qualifications</mat-option>
-                      <mat-option value="RSQ">Request for Statement of Qualifications</mat-option>
-                      <mat-option value="RFSQ">Request for Statement of Qualifications</mat-option>
-                      <mat-option value="RFI">Request for Information</mat-option>
-                      <mat-option value="RFB">Request for Bid</mat-option>
-                      <mat-option value="RFC">Request for Construction</mat-option>
-                      <mat-option value="CSB">Competitive Sealed Bids</mat-option>
-                      <mat-option value="DQ">Documented Quote</mat-option>
-                      <mat-option value="INF">Informal Bid</mat-option>
-                      <mat-option value="LOI">Letter of Interest</mat-option>
-                      <mat-option value="NFS">Notice of Final Settlements</mat-option>
-                      <mat-option value="NIB">Notice Inviting Bids</mat-option>
-                      <mat-option value="QR">Quotation Request</mat-option>
-                      <mat-option value="RCO">Request for Competitive Offering</mat-option>
-                      <mat-option value="RFO">Request for Offer</mat-option>
-                      <mat-option value="WQ">Written Quote</mat-option>
+                      <mat-option value="RFP">RFP - Request for Proposals</mat-option>
+                    <mat-option value="RFQ">RFQ - Request for Quotation</mat-option>
+                    <mat-option value="IFQ">IFQ - Invitation for Quote</mat-option>
+                    <mat-option value="ITB">ITB - Invitation to Bid</mat-option>
+                    <mat-option value="IFB">IFB - Invitation for Bids</mat-option>
+                    <mat-option value="RFB">RFB - Request for Bids</mat-option>
+                    <mat-option value="SOQ">SOQ - Statement of Qualifications</mat-option>
+                    <mat-option value="SPL">SPL - Special Notice</mat-option>
+                    <mat-option value="SFQ">SFQ - Solicitation for Quote</mat-option>
+                    <mat-option value="RSB">RSB - Request for Sealed Bid</mat-option>
+                    <mat-option value="RSOQ">RSOQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RSQ">RSQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RFSQ">RFSQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RFI">RFI - Request for Information</mat-option>
+                    <mat-option value="RFB">RFB - Request for Bid</mat-option>
+                    <mat-option value="RFC">RFC - Request for Construction</mat-option>
+                    <mat-option value="CSB">CSB - Competitive Sealed Bids</mat-option>
+                    <mat-option value="DQ">DQ - Documented Quote</mat-option>
+                    <mat-option value="INF">INF - Informal Bid</mat-option>
+                    <mat-option value="LOI">LOI - Letter of Interest</mat-option>
+                    <mat-option value="NFS">NFS - Notice of Final Settlements</mat-option>
+                    <mat-option value="NIB">NIB - Notice Inviting Bids</mat-option>
+                    <mat-option value="QR">QR - Quotation Request</mat-option>
+                    <mat-option value="RCO">RCO - Request for Competitive Offering</mat-option>
+                    <mat-option value="RFO">RFO - Request for Offer</mat-option>
+                    <mat-option value="WQ">WQ - Written Quote</mat-option>
                     </mat-select>
                 </mat-form-field>
               </div>
