--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -138,34 +138,34 @@
               <div class="input-group">
                 <!-- dropdown -->
                 <mat-form-field>
-
+                   
                   <mat-select placeholder="Bid Type" name="bid_type" [(ngModel)]="bid_type">
-                    <mat-option value="RFP"> Request for Proposals</mat-option>
-                    <mat-option value="RFQ">Request for Quotation</mat-option>
-                    <mat-option value="IFQ">Invitation for Quote</mat-option>
-                    <mat-option value="ITB">Invitation to Bid</mat-option>
-                    <mat-option value="IFB">Invitation for Bids</mat-option>
-                    <mat-option value="RFB">Request for Bids</mat-option>
-                    <mat-option value="SOQ">Special Notice</mat-option>
-                    <mat-option value="SPL">Special Notice</mat-option>
-                    <mat-option value="SFQ">Solicitation for Quote</mat-option>
-                    <mat-option value="RSB">Request for Sealed Bid</mat-option>
-                    <mat-option value="RSOQ">Request for Statement of Qualifications</mat-option>
-                    <mat-option value="RSQ">Request for Statement of Qualifications</mat-option>
-                    <mat-option value="RFSQ">Request for Statement of Qualifications</mat-option>
-                    <mat-option value="RFI">Request for Information</mat-option>
-                    <mat-option value="RFB">Request for Bid</mat-option>
-                    <mat-option value="RFC">Request for Construction</mat-option>
-                    <mat-option value="CSB">Competitive Sealed Bids</mat-option>
-                    <mat-option value="DQ">Documented Quote</mat-option>
-                    <mat-option value="INF">Informal Bid</mat-option>
-                    <mat-option value="LOI">Letter of Interest</mat-option>
-                    <mat-option value="NFS">Notice of Final Settlements</mat-option>
-                    <mat-option value="NIB">Notice Inviting Bids</mat-option>
-                    <mat-option value="QR">Quotation Request</mat-option>
-                    <mat-option value="RCO">Request for Competitive Offering</mat-option>
-                    <mat-option value="RFO">Request for Offer</mat-option>
-                    <mat-option value="WQ">Written Quote</mat-option>
+                    <mat-option value="RFP">RFP - Request for Proposals</mat-option>
+                    <mat-option value="RFQ">RFQ - Request for Quotation</mat-option>
+                    <mat-option value="IFQ">IFQ - Invitation for Quote</mat-option>
+                    <mat-option value="ITB">ITB - Invitation to Bid</mat-option>
+                    <mat-option value="IFB">IFB - Invitation for Bids</mat-option>
+                    <mat-option value="RFB">RFB - Request for Bids</mat-option>
+                    <mat-option value="SOQ">SOQ - Statement of Qualifications</mat-option>
+                    <mat-option value="SPL">SPL - Special Notice</mat-option>
+                    <mat-option value="SFQ">SFQ - Solicitation for Quote</mat-option>
+                    <mat-option value="RSB">RSB - Request for Sealed Bid</mat-option>
+                    <mat-option value="RSOQ">RSOQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RSQ">RSQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RFSQ">RFSQ - Request for Statement of Qualifications</mat-option>
+                    <mat-option value="RFI">RFI - Request for Information</mat-option>
+                    <mat-option value="RFB">RFB - Request for Bid</mat-option>
+                    <mat-option value="RFC">RFC - Request for Construction</mat-option>
+                    <mat-option value="CSB">CSB - Competitive Sealed Bids</mat-option>
+                    <mat-option value="DQ">DQ - Documented Quote</mat-option>
+                    <mat-option value="INF">INF - Informal Bid</mat-option>
+                    <mat-option value="LOI">LOI - Letter of Interest</mat-option>
+                    <mat-option value="NFS">NFS - Notice of Final Settlements</mat-option>
+                    <mat-option value="NIB">NIB - Notice Inviting Bids</mat-option>
+                    <mat-option value="QR">QR - Quotation Request</mat-option>
+                    <mat-option value="RCO">RCO - Request for Competitive Offering</mat-option>
+                    <mat-option value="RFO">RFO - Request for Offer</mat-option>
+                    <mat-option value="WQ">WQ - Written Quote</mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
