--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -98,7 +98,7 @@
                     <div class="col-sm-12">
                         <mat-form-field>
                             <mat-select placeholder="Search By Sub Category" [(ngModel)]=subcates name="subcat"
-                                [disabled]="!cates">
+                                [disabled]="!cates" (change)="onSubmit(f)">
                                 <input class="inp" type="text" [(ngModel)]="subcatsearch"
                                     [ngModelOptions]="{standalone: true}" placeholder="Search By Sub Category"
                                     class="search-allstates" style="width: 100%; border-radius: 7px">
