--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -65,7 +65,7 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
-              
+
                 <mat-form-field>
 
                   <mat-select [(ngModel)]="data.agency" name="agencys" placeholder="Select Agency">
@@ -78,19 +78,20 @@
                       [(ngModel)]="data.agency" *ngIf="agencie==true" />
                     <mat-option *ngFor="let item of agen | filter:agensearch" [value]="item.agencies">{{item.agencies }}
                     </mat-option>
-                    
+
 
                   </mat-select>
                 </mat-form-field>
               </div>
-              
+
             </div>
-            
+
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
                 <mat-form-field>
-                  <input matInput placeholder="Old Category" name="oldcategory" [(ngModel)]="data.oldcategory" (change)="select_oldcat()"/>
+                  <input matInput placeholder="Old Category" name="oldcategory" [(ngModel)]="data.oldcategory"
+                    (change)="select_oldcat()" />
 
                 </mat-form-field>
               </div>
@@ -109,35 +110,36 @@
                         </mat-option>
                       </mat-autocomplete>
                     </mat-form-field> -->
-                    <mat-form-field class="example-chip-list" *ngIf="data.category">
-                        <mat-chip-list #chipList>
-                            <mat-chip [selectable]="selectable" [removable]="removable" (removed)="remove(data.category, $event)" *ngIf="hide==false">
-                                {{data.category}}
-                               
-                            </mat-chip>
-                            <mat-chip *ngFor="let list of data.category" [selectable]="selectable" [removable]="removable" (removed)="remove(list, $event)">
-                                {{list}}
-                                <i class="fa fa-remove" (click)="remove(list, $event)"></i>
-                                
-                            </mat-chip>
-                            <input [matChipInputFor]="chipList" 
-                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                [matChipInputAddOnBlur]="addOnBlur">
-                        </mat-chip-list>
-                    </mat-form-field>
+                <mat-form-field class="example-chip-list" *ngIf="data.category">
+                  <mat-chip-list #chipList>
+                    <mat-chip [selectable]="selectable" [removable]="removable"
+                      (removed)="remove(data.category, $event)" *ngIf="hide==false">
+                      {{data.category}}
+
+                    </mat-chip>
+                    <mat-chip *ngFor="let list of data.category" [selectable]="selectable" [removable]="removable"
+                      (removed)="remove(list, $event)">
+                      {{list}}
+                      <i class="fa fa-remove" (click)="remove(list, $event)"></i>
+
+                    </mat-chip>
+                    <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                      [matChipInputAddOnBlur]="addOnBlur">
+                  </mat-chip-list>
+                </mat-form-field>
                 <mat-form-field>
-                   
+
                   <mat-select [(ngModel)]="data.category" name="category" placeholder="Select Category"
                     (change)="subcategory(data.category)" multiple>
                     <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}"
                       placeholder="Search By Category" class="search-allstates">
-                    <i class="fa fa-search " area-hidden="true"></i>  
+                    <i class="fa fa-search " area-hidden="true"></i>
                     <button class="btn btn-primary mg-0" (click)="cat_check()">Others</button>
                     <input class="inp" class="search-allstates" type="text" placeholder="Category" name="category"
-                      [(ngModel)]="data.category" (change)="subcategory(data.category)"  *ngIf="category==true" />
+                      [(ngModel)]="data.category" (change)="subcategory(data.category)" *ngIf="category==true" />
                     <mat-option *ngFor="let catitem of cat | filter:catsearch" [value]="catitem.category_name">
                       {{catitem.category_name}}</mat-option>
-                  
+
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -146,34 +148,36 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
-                  <mat-form-field class="example-chip-list" *ngIf="data.subcat">
-                      <mat-chip-list #chipList>
-                          <mat-chip [selectable]="selectable" [removable]="removable" (removed)="remove(data.subcat, $event)" *ngIf="hide1==false">
-                              {{data.subcat}}
-                             
-                          </mat-chip>
-                          <mat-chip *ngFor="let list of data.subcat" [selectable]="selectable" [removable]="removable" (removed)="remove(list, $event)">
-                              {{list}}
-                              <i class="fa fa-remove" (click)="remove1(list, $event)"></i>
-                              
-                          </mat-chip>
-                          <input [matChipInputFor]="chipList" 
-                              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                              [matChipInputAddOnBlur]="addOnBlur">
-                      </mat-chip-list>
-                  </mat-form-field>
+                <mat-form-field class="example-chip-list" *ngIf="data.subcat">
+                  <mat-chip-list #chipList>
+                    <mat-chip [selectable]="selectable" [removable]="removable" (removed)="remove(data.subcat, $event)"
+                      *ngIf="hide1==false">
+                      {{data.subcat}}
+
+                    </mat-chip>
+                    <mat-chip *ngFor="let list of data.subcat" [selectable]="selectable" [removable]="removable"
+                      (removed)="remove(list, $event)">
+                      {{list}}
+                      <i class="fa fa-remove" (click)="remove1(list, $event)"></i>
+
+                    </mat-chip>
+                    <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                      [matChipInputAddOnBlur]="addOnBlur">
+                  </mat-chip-list>
+                </mat-form-field>
                 <mat-form-field class="category-edit-rfp">
 
-                  <mat-select [(ngModel)]="data.subcat" name="subcat" placeholder="Select Sub Category" multiple (change)="selectsubcate()">
+                  <mat-select [(ngModel)]="data.subcat" name="subcat" placeholder="Select Sub Category" multiple
+                    (change)="selectsubcate()">
                     <input class="inp" type="text" [(ngModel)]="subcatsearch" [ngModelOptions]="{standalone: true}"
                       placeholder="Search By Sub Category" class="search-allstates">
-                    <i class="fa fa-search " area-hidden="true"></i> 
+                    <i class="fa fa-search " area-hidden="true"></i>
                     <button class="btn btn-primary mg-0" (click)="subchk()">Others</button>
                     <input class="inp" class="search-allstates" type="text" placeholder="Sub Category" name="subcat"
-                      [(ngModel)]="data.subcat" *ngIf="subcate==true"/>
+                      [(ngModel)]="data.subcat" *ngIf="subcate==true" />
                     <mat-option *ngFor="let catitem of sub_categories | filter:subcatsearch"
                       [value]="catitem.subcategory_name">{{catitem.subcategory_name}}</mat-option>
-                   
+
                   </mat-select>
                 </mat-form-field>
               </div>
@@ -197,7 +201,7 @@
                 <mat-form-field>
                   <!-- <input matInput placeholder="Bid Type" name="bid_type" [(ngModel)]="data.bid_type" /> -->
                   <mat-select placeholder="Bid Type" name="bid_type" [(ngModel)]="data.bid_type">
-                      <mat-option value="RFP">RFP - Request for Proposals</mat-option>
+                    <mat-option value="RFP">RFP - Request for Proposals</mat-option>
                     <mat-option value="RFQ">RFQ - Request for Quotation</mat-option>
                     <mat-option value="IFQ">IFQ - Invitation for Quote</mat-option>
                     <mat-option value="ITB">ITB - Invitation to Bid</mat-option>
@@ -223,7 +227,7 @@
                     <mat-option value="RCO">RCO - Request for Competitive Offering</mat-option>
                     <mat-option value="RFO">RFO - Request for Offer</mat-option>
                     <mat-option value="WQ">WQ - Written Quote</mat-option>
-                    </mat-select>
+                  </mat-select>
                 </mat-form-field>
               </div>
             </div>
@@ -240,8 +244,7 @@
               <div class="input-group">
 
                 <mat-form-field>
-                  <input matInput placeholder="County" name="city_or_county"
-                    [(ngModel)]="data.city_or_county" />
+                  <input matInput placeholder="County" name="city_or_county" [(ngModel)]="data.city_or_county" />
 
                 </mat-form-field>
               </div>
@@ -277,29 +280,33 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group margin-zero1">
-                <!-- <span class="btn-file margin-top-10">Upload File
-                      <input (change)="onChange($event)"  type="file"  required> </span> -->
-                <mat-form-field>
+                <div class="pull-left"> <button class="btn-file">Upload file<input class="btn btn-fill"
+                      (change)="onChange($event)" type="file"></button>
+                </div>
+                <div class="edit-image" *ngIf="data.web_infoo">
+                    <a href="{{data.web_infoo}}" target="_blank">
+                        <i class="material-icons">insert_drive_file</i>
+                        View Documents
+                    </a>
+                    <!-- <embed  src="{{data.web_infoo}}" width="800px" height="2100px" /> -->
+                  <!-- <file *ngIf="data.web_infoo" src="{{data.web_infoo}}"> -->
+                </div>
 
-                  <input matInput placeholder="Web Information PDF" name="web_info" [(ngModel)]="data.web_infoo" />
-
-                </mat-form-field>
               </div>
             </div>
             <div class="col-md-6 col-sm-6" hidden=true>
               <div class="input-group margin-zero1">
 
                 <mat-form-field>
-                  
-                  <mat-select name="rfp_reference" [(ngModel)]="data.rfp_reference" placeholder="Rfp Reference"
-                  >
-                  
-                 
-                  <mat-option value="true">
-                   True</mat-option>
-                   <mat-option value="false">
+
+                  <mat-select name="rfp_reference" [(ngModel)]="data.rfp_reference" placeholder="Rfp Reference">
+
+
+                    <mat-option value="true">
+                      True</mat-option>
+                    <mat-option value="false">
                       False</mat-option>
-                </mat-select>
+                  </mat-select>
                 </mat-form-field>
               </div>
             </div>
@@ -332,7 +339,7 @@
             <div class="col-md-12 col-sm-12">
 
               <div class=" text-center">
-                <button type="submit" class="btn btn-fill" (click)="editClick()" data-dismiss="modal">Update</button>
+                <button type="submit" class="btn btn-fill" (click)="editClick()" >Update</button>
 
                 <button type="button" class="btn btn-fill" (click)="onNoClick()">Cancel</button>
 
