--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -256,12 +256,13 @@
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group margin-zero1">
-
-                <mat-form-field>
+                <div> <button class="btn-file">Upload File<input class="img-input" (change)="onChange($event)" 
+                  type="file"></button> </div>
+                <!-- <mat-form-field>
 
                   <input matInput placeholder="Web Information PDF" name="web_info" [(ngModel)]="web_info" />
 
-                </mat-form-field>
+                </mat-form-field> -->
               </div>
             </div>
             <div class="col-md-6 col-sm-6">
