--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,10 +33,11 @@
                     </div>
                     <div class="form-group">
                         <div class="checkbox col-sm-6 padding-0 dp-inline">
-                            <label>
+                                <mat-slide-toggle>Stay Signed in</mat-slide-toggle>
+                            <!-- <label>
                                 <input type="checkbox" value="" name="remember" checked>
-                                <b>Stay Signed in</b>
-                            </label>
+                                <b></b>
+                            </label> -->
                         </div>
                        
                             <app-recapcha class="dp-inline"></app-recapcha>
