--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -257,8 +257,8 @@
                       <h3>
                         <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}"> {{rfp.title}}</a>
                       </h3>
-                      <h5 *ngIf="rfp?.agency">
-                       <i class="fa fa-building-o"></i> Agency : <span>{{rfp?.agency}}</span></h5>
+                      <!-- <h5 *ngIf="rfp?.agency">
+                       <i class="fa fa-building-o"></i> Agency : <span>{{rfp?.agency}}</span></h5> -->
                       <h5 class="sh-rfp-dates">
                         <i class="fa fa-university"></i> Category :
                         <span>{{rfp.new_category | slice:0:21}}...</span>
